# setcover-gnn

./: .dvcignore  .gitignore  .pre-commit-config.yaml  .precommit-config.yaml  Dockerfile  README.md  pyproject.toml
configs/: config.yaml
configs/data/: default.yaml
configs/model/: default.yaml
configs/training/: default.yaml
examples/: advanced_example.py  train_setcover.py
scripts/: __init__,py  download_data.py  msc_parser.py  run_training.py  setup_mlflow_experiment.py  setup_uv.sh  solve_from_file.py  solve_local_file.py  start_mlflow.py
src/setcover_gnn/: __init__.py  core.py
src/setcover_gnn/data/: generation.py  qubo_conversion.py
src/setcover_gnn/models/: gnn_models.py  lightning_module.py
src/setcover_gnn/training/: trainer.py
src/setcover_gnn/utils/: graph_utils.py  verification.py
tests/: test_all.py  test_data.py  test_with_hydra.py
