[build-system]
requires = ["hatchling", "setuptools"]
build-backend = "hatchling.build"

[project]
name = "setcover-gnn"
version = "0.1.0"
description = "GNN-based solver for Set Cover problems using PyTorch Lightning"
authors = [
    {name = "HrpperCroFT", email = "hrppercroft@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "lightning==2.6.0",
    "networkx==3.6.1",
    "numpy==1.26.4",
    "qubovert==1.2.5",
    "sympy==1.14.0",
    "scipy==1.16.3",
    "click",
    "torch==2.3.0+cu121",
    "torchvision",
    "torchaudio",
    "dgl",
    "torchdata==0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "black",
    "isort",
    "flake8",
    "mypy",
    "pre-commit",
    "jupyter",
    "ipython",
]
test = [
    "hydra-core",
    "omegaconf",
    "mlflow",
    "dvc",
    "gdown",
]
plotting = [
    "matplotlib",
    "pandas",
]

[tool.hatch.build.targets.wheel]
packages = ["src/setcover_gnn"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"

[[tool.uv.index]]
name = "dgl"
url = "https://data.dgl.ai/wheels/cu121/repo.html"
format = "flat"
ignored-error-codes = [403]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
dgl = { index = "dgl" }
